разметка личного проекта

--- a/index.html
+++ b/index.html
@@ -5,8 +5,108 @@
     <title>HTML Academy: Глейси</title>
   </head>
   <body>
+    <header class="main-header">
+         <nav class="main-navigation">
+           <a class="main-header-logo">
+             <img src="img/index-logo.svg" alt="Логотип Gllacy Shop">
+           </a>
+         <ul class="site-navigation">
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="delivery.html">Доставка и оплата</a></li>
+          <li><a href="about.html">О Компании</a></li>
+        </ul>
+        <ul class="user-navigation">
+          <li class="login-link">
+            Вход
+          </li>
+          <li class="basket">
+            Пусто
+          </li>
+        </ul>
+         </nav>
+       </header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+       <main class="container">
 
+         <h1 class="visually-hidden">Gllacy Shop</h1>
+
+         <section class="features">
+
+           <h2>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже
+             мороженого собственного производства на развес</h2>
+
+             <ul class="features-list">
+               <li class="feature-item">
+                 <img src="#">
+                 <p>
+                   Все наше мороженое изготавливается на собственном
+                   производстве, с использованием современного оборудования и
+                   проверенных временем технологий.
+                 </p>
+               </li>
+               <li class="feature-item">
+                 <img src="#">
+                 <p>
+                   Для приготовления мороженого используются настоящие сливки и
+                   молоко высочайшего качества. Все дополнительные ингредиенты и
+                   добавки произведены из натурального, экологически чистого сырья.
+                 </p>
+               </li>
+               <li class="feature-item">
+                 <img src="#">
+                 <p>
+                   Закупка ингредиентов  производится только у проверенных
+                   фермерских хозяйств и компаний, с которыми нас связывает
+                   долговременное сотрудничество.
+                 </p>
+               </li>
+               <li class="feature-item">
+                 <img src="#">
+                 <p>
+                   Доставка нашего мороженого до заказчиков осуществляется в
+                   специальном термопаке, который не дает мороженому растаять в
+                   пути и позволяет сохранить превосходный вкус.
+                 </p>
+               </li>
+             </ul>
+         </section>
+         <article class="blog">
+           <p>
+            Новое в нашем блоге
+           </p>
+           <b>10 способов сервировки фруктовых щербетов к столу</b>
+         </article>
+         <section class="subscribe">
+           <p>
+             Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего
+             самого вкусного, что у нас происходит. Обещаем не спамить и не
+             слать всякой ненужной ерунды. Честно =)
+           </p>
+           <!-- Здесь будет форма -->
+           <span class="button-send">Отправить</span>
+         </section>
+       </main>
+       <footer class="main-footer">
+         <div class="footer-social">
+           <a class="social-button" href="#">Twitter</a>
+           <a class="social-button" href="#">Instagram</a>
+           <a class="social-button" href="#">Facebook</a>
+           <a class="social-button" href="#">VK</a>
+         </div>
+         <div class="about">
+           <ul>
+             <li>Для поставщиков</li>
+             <li>О производстве</li>
+             <li>Наши документы</li>
+             <li>Экологические стандарты</li>
+           </ul>
+         </div>
+         <div class="copyright">
+           <a class="copyright-button" href="https://htmlacademy.ru">HTML Academy</a>
+           <p>
+             Сделано в HTML Academy © 2019
+           </p>
+         </div>
+       </footer>
   </body>
 </html>
