всё поправил, должно быть опрятней!
ты права, в прошлый раз видимо устал! даже два раза закрыл header, которого не было XD

--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header class="main-header">
@@ -10,155 +11,153 @@
            <a class="main-header-logo">
              <img src="img/index-logo.svg" alt="Логотип Gllacy Shop">
            </a>
-         <ul class="site-navigation">
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="delivery.html">Доставка и оплата</a></li>
-          <li><a href="about.html">О Компании</a></li>
-        </ul>
-        <ul class="user-navigation">
-          <li class="login-link">
-            Вход
-          </li>
-          <li class="basket">
-            2 товара
-          </li>
-        </ul>
-         </nav>
-         <p>
-           С 10 до 20, ежедневно
-         </p>
-         <p>
-           <b>8 812 450-25-25</b>
-         </p>
-      <nav class="catalog">
-        <ul class="catalog-list">
-          <li class="catalog-item">
-            Главная
-          </li>
-          <li class="catalog-item">
-            Каталог
-          </li>
-          <li class="catalog-item">
-            Сливочное
-          </li>
-        </ul>
-      </nav>
+           <ul class="site-navigation">
+            <li class="navs"><a href="catalog.html">Каталог</a></li>
+            <li class="navs"><a href="delivery.html">Доставка и оплата</a></li>
+            <li class="navs"><a href="about.html">О Компании</a></li>
+          </ul>
+          <ul class="user-navigation">
+            <li class="search">
+              <!-- здесь будет кнопка поиска -->
+            </li>
+            <li class="login-link">
+              <a href="entrance.html">Вход</a>
+            </li>
+            <li class="basket">
+              <a href="basket.html">Пусто</a>
+            </li>
+          </ul>
+           </nav>
+           <section class="timeandphone">
+             <p class="time">
+               С 10 до 20, ежедневно
+             </p>
+             <p class="phone">
+               8 812 450-25-25
+             </p>
+           </section>
+         </header>
+
+        <div class="catalog">
+          <a href="#">Главная</a>
+          <a href="#">Каталог</a>
+          <a class="active" href="#">Сливочное</a>
+        </div>
       <p>
-        <strong>Сливочное мороженое</strong>
+        <h1>Сливочное мороженое</h1>
       </p>
-       </header>
 
        <main class="ice-cream">
          <ul class="ice-cream-list">
            <!-- Первая строка -->
            <li class="ice-cream-item">
-             <img src="#">
+             <img src="#" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
              <p>
                310 ₽/кг
              </p>
             <p>
-              Сливочное с апельсиновым джемом и цитрусовой стружкой
+              <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
             </p>
            </li>
            <li class="ice-cream-item">
-             <img src="#">
+             <img src="#" alt="Сливочно-кофейное с кусочками шоколада">
              <p>
-               380 ₽/кг
+               380₽<span class="kg">/кг</span>
              </p>
             <p>
-              Сливочно-кофейное с кусочками шоколада
+              <a href="#">Сливочно-кофейное с кусочками шоколада</a>
             </p>
            </li>
            <li class="ice-cream-item">
-             <img src="#">
+             <img src="#" alt="Сливочно-клубничное с присыпкой из белого шоколада">
              <p>
-               355 ₽/кг
+               355₽<span class="kg">/кг</span>
              </p>
             <p>
-              Сливочно-клубничное с присыпкой из белого шоколада
+              <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
             </p>
            </li>
            <li class="ice-cream-item">
-             <img src="#">
+             <img src="#" alt="Сливочное крем-брюле с карамельной подливкой">
              <p>
-               415 ₽/кг
+               415₽<span class="kg">/кг</span>
              </p>
             <p>
-              Сливочное крем-брюле с карамельной подливкой
+              <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
             </p>
            </li>
           <!-- Вторая строка -->
            <li class="ice-cream-item">
-             <img src="#">
+             <img src="#" alt="Сливочное с брусничным джемом">
              <p>
-               325 ₽/кг
+               325₽<span class="kg">/кг</span>
              </p>
             <p>
-              Сливочное с брусничным джемом
+              <a href="#">Сливочное с брусничным джемом</a>
             </p>
            </li>
            <li class="ice-cream-item">
-             <img src="#">
+             <img src="#" alt="Сливочно-черничное с цельными ягодами черники">
              <p>
-               410 ₽/кг
+               410₽<span class="kg">/кг</span>
              </p>
             <p>
-              Сливочно-черничное с цельными ягодами черники
+              <a href="#">Сливочно-черничное с цельными ягодами черники</a>
             </p>
            </li>
            <li class="ice-cream-item">
-             <img src="#">
+             <img src="#" alt="Сливочно-лимонное с карамельной присыпкой">
              <p>
-               375 ₽/кг
+               375₽<span class="kg">/кг</span>
              </p>
             <p>
-              Сливочно-лимонное с карамельной присыпкой
+              <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
             </p>
            </li>
            <li class="ice-cream-item">
-             <img src="#">
+             <img src="#" alt="Сливочное с шоколадной стружкой">
              <p>
-               320 ₽/кг
+               320₽<span class="kg">/кг</span>
              </p>
             <p>
-              Сливочное с шоколадной стружкой
+              <a href="#">Сливочное с шоколадной стружкой</a>
             </p>
            </li>
            <!-- Третья строка -->
            <li class="ice-cream-item">
-             <img src="#">
+             <img src="#" alt="Сливочно-ванильное с кусочками шоколада">
              <p>
-               440 ₽/кг
+               440₽<span class="kg">/кг</span>
              </p>
             <p>
-              Сливочно-ванильное с кусочками шоколада
+              <a href="#">Сливочно-ванильное с кусочками шоколада</a>
             </p>
            </li>
            <li class="ice-cream-item">
-             <img src="#">
+             <img src="#" alt="Сливочное с ментоловым сиропом">
              <p>
-               435 ₽/кг
+               435₽<span class="kg">/кг</span>
              </p>
             <p>
-              Сливочное с ментоловым сиропом
+              <a href="#">Сливочное с ментоловым сиропом</a>
             </p>
            </li>
            <li class="ice-cream-item">
-             <img src="#">
+             <img src="#" alt="Сливочное с кусочками черного шоколада">
              <p>
-               355 ₽/кг
+               355₽<span class="kg">/кг</span>
              </p>
             <p>
-              Сливочное с кусочками черного шоколада
+              <a href="#">Сливочное с кусочками черного шоколада</a>
             </p>
            </li>
            <li class="ice-cream-item">
-             <img src="#">
+             <img src="#" alt="Сливочное с мятным сиропом">
              <p>
-               420 ₽/кг
+               420₽<span class="kg">/кг</span>
              </p>
             <p>
-              Сливочное с мятным сиропом
+              <a href="#">Сливочное с мятным сиропом</a>
             </p>
            </li>
          </ul>
@@ -166,24 +165,26 @@
 
        </main>
        <footer class="main-footer">
-         <div class="footer-social">
-           <a class="social-button" href="#">Twitter</a>
-           <a class="social-button" href="#">Instagram</a>
-           <a class="social-button" href="#">Facebook</a>
-           <a class="social-button" href="#">VK</a>
+         <ul class="footer-social">
+           <li class="social-button"><a href="#">Twitter</a></li>
+           <li class="social-button"><a href="#">Instagram</a></li>
+           <li class="social-button"><a href="#">Facebook</a></li>
+           <li class="social-button"><a href="#">VK</a></li>
          </div>
-         <div class="about">
-           <ul>
-             <li>Для поставщиков</li>
-             <li>О производстве</li>
-             <li>Наши документы</li>
-             <li>Экологические стандарты</li>
+           <ul class="about">
+             <li><a class="about-link" href="supplier.html">Для поставщиков</li></a>
+             <li><a class="about-link" href="aboutus.html">О производстве</li></a>
+             <li><a class="about-link" href="docs.html">Наши документы</li></a>
+             <li><a class="about-link" href="eco.html">Экологические стандарты</li></a>
            </ul>
-         </div>
          <div class="copyright">
-           <a class="copyright-button" href="https://htmlacademy.ru">HTML Academy</a>
+           <a class="copyright-button" href="https://htmlacademy.ru/intensive/htmlcss">
+             HTML Academy
+           </a>
            <p>
-             Сделано в HTML Academy © 2019
+             Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">
+               HTML Academy
+             </a> © 2019
            </p>
          </div>
        </footer>
