забыл один span

--- a/catalog.html
+++ b/catalog.html
@@ -53,7 +53,7 @@
            <li class="ice-cream-item">
              <img src="#" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
              <p>
-               310 ₽/кг
+               310₽<span class="kg">/кг</span>
              </p>
             <p>
               <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
