прогнал через валидатор и увидел пару грубых ошибок!!

--- a/catalog.html
+++ b/catalog.html
@@ -43,9 +43,9 @@
           <a href="#">Каталог</a>
           <a class="active" href="#">Сливочное</a>
         </div>
-      <p>
+
         <h1>Сливочное мороженое</h1>
-      </p>
+
 
        <main class="ice-cream">
          <ul class="ice-cream-list">
@@ -170,12 +170,12 @@
            <li class="social-button"><a href="#">Instagram</a></li>
            <li class="social-button"><a href="#">Facebook</a></li>
            <li class="social-button"><a href="#">VK</a></li>
-         </div>
+         </ul>
            <ul class="about">
-             <li><a class="about-link" href="supplier.html">Для поставщиков</li></a>
-             <li><a class="about-link" href="aboutus.html">О производстве</li></a>
-             <li><a class="about-link" href="docs.html">Наши документы</li></a>
-             <li><a class="about-link" href="eco.html">Экологические стандарты</li></a>
+             <li><a class="about-link" href="supplier.html">Для поставщиков</a></li>
+             <li><a class="about-link" href="aboutus.html">О производстве</a></li>
+             <li><a class="about-link" href="docs.html">Наши документы</a></li>
+             <li><a class="about-link" href="eco.html">Экологические стандарты</a></li>
            </ul>
          <div class="copyright">
            <a class="copyright-button" href="https://htmlacademy.ru/intensive/htmlcss">
