6. Основное задание: готовим графику личного проекта

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
     <header class="main-header">
          <nav class="main-navigation">
            <a class="main-header-logo">
-             <img src="img/index-logo.svg" alt="Логотип Gllacy Shop">
+             <img src="img/logo.svg" width="154" height="64" alt="Логотип Gllacy Shop">
            </a>
            <ul class="site-navigation">
             <li class="navs"><a href="catalog.html">Каталог</a></li>
@@ -18,13 +18,15 @@
           </ul>
           <ul class="user-navigation">
             <li class="search">
-              <!-- здесь будет кнопка поиска -->
+              <img src="img/loupe.svg" width="17" height="17" alt="лупа поиска">
             </li>
             <li class="login-link">
+              <img src="img/entrance.svg" width="17" height="17" alt="Вход">
               <a href="entrance.html">Вход</a>
             </li>
             <li class="basket">
-              <a href="basket.html">Пусто</a>
+              <img src="img/basket-red.svg" width="21" height="20" alt="Пустая корзина">
+              <a href="basket.html">2 товара</a>
             </li>
           </ul>
            </nav>
@@ -51,7 +53,7 @@
          <ul class="ice-cream-list">
            <!-- Первая строка -->
            <li class="ice-cream-item">
-             <img src="#" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+             <img src="img/1.png" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
              <p>
                310₽<span class="kg">/кг</span>
              </p>
@@ -60,7 +62,7 @@
             </p>
            </li>
            <li class="ice-cream-item">
-             <img src="#" alt="Сливочно-кофейное с кусочками шоколада">
+             <img src="img/2.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
              <p>
                380₽<span class="kg">/кг</span>
              </p>
@@ -69,7 +71,7 @@
             </p>
            </li>
            <li class="ice-cream-item">
-             <img src="#" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+             <img src="img/3.png" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
              <p>
                355₽<span class="kg">/кг</span>
              </p>
@@ -78,7 +80,7 @@
             </p>
            </li>
            <li class="ice-cream-item">
-             <img src="#" alt="Сливочное крем-брюле с карамельной подливкой">
+             <img src="img/4.png" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
              <p>
                415₽<span class="kg">/кг</span>
              </p>
@@ -88,7 +90,7 @@
            </li>
           <!-- Вторая строка -->
            <li class="ice-cream-item">
-             <img src="#" alt="Сливочное с брусничным джемом">
+             <img src="img/5.png" width="267" height="267" alt="Сливочное с брусничным джемом">
              <p>
                325₽<span class="kg">/кг</span>
              </p>
@@ -97,7 +99,7 @@
             </p>
            </li>
            <li class="ice-cream-item">
-             <img src="#" alt="Сливочно-черничное с цельными ягодами черники">
+            <img src="img/6.png" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
              <p>
                410₽<span class="kg">/кг</span>
              </p>
@@ -106,7 +108,7 @@
             </p>
            </li>
            <li class="ice-cream-item">
-             <img src="#" alt="Сливочно-лимонное с карамельной присыпкой">
+             <img src="img/7.png" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
              <p>
                375₽<span class="kg">/кг</span>
              </p>
@@ -115,7 +117,7 @@
             </p>
            </li>
            <li class="ice-cream-item">
-             <img src="#" alt="Сливочное с шоколадной стружкой">
+            <img src="img/8.png" width="267" height="267" alt="Сливочное с шоколадной стружкой">
              <p>
                320₽<span class="kg">/кг</span>
              </p>
@@ -125,7 +127,7 @@
            </li>
            <!-- Третья строка -->
            <li class="ice-cream-item">
-             <img src="#" alt="Сливочно-ванильное с кусочками шоколада">
+             <img src="img/9.png" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
              <p>
                440₽<span class="kg">/кг</span>
              </p>
@@ -134,7 +136,7 @@
             </p>
            </li>
            <li class="ice-cream-item">
-             <img src="#" alt="Сливочное с ментоловым сиропом">
+             <img src="img/10.png" width="267" height="267" alt="Сливочное с ментоловым сиропом">
              <p>
                435₽<span class="kg">/кг</span>
              </p>
@@ -143,7 +145,7 @@
             </p>
            </li>
            <li class="ice-cream-item">
-             <img src="#" alt="Сливочное с кусочками черного шоколада">
+             <img src="img/11.png" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
              <p>
                355₽<span class="kg">/кг</span>
              </p>
@@ -152,7 +154,7 @@
             </p>
            </li>
            <li class="ice-cream-item">
-             <img src="#" alt="Сливочное с мятным сиропом">
+            <img src="img/12.png" width="267" height="267" alt="Сливочное с мятным сиропом">
              <p>
                420₽<span class="kg">/кг</span>
              </p>
@@ -166,20 +168,30 @@
        </main>
        <footer class="main-footer">
          <ul class="footer-social">
-           <li class="social-button"><a href="#">Twitter</a></li>
-           <li class="social-button"><a href="#">Instagram</a></li>
-           <li class="social-button"><a href="#">Facebook</a></li>
-           <li class="social-button"><a href="#">VK</a></li>
+           <li class="social-button">
+             <img src="img/twitter.svg" width="32" height="32" alt="Twitter" />
+           </li>
+           <li class="social-button">
+             <img src="img/instagram.svg" width="32" height="32" alt="Instagram" />
+           </li>
+           <li class="social-button">
+             <img src="img/facebook.svg" width="32" height="32" alt="Facebook" />
+           </li>
+           <li class="social-button">
+             <img src="img/vk.svg" width="32" height="32" alt="VK" />
+           </li>
          </ul>
            <ul class="about">
-             <li><a class="about-link" href="supplier.html">Для поставщиков</a></li>
+             <li><a class="about-link" href="supplier.html">
+               <img src="img/heart.svg" width="15" height="13" alt="сердечко" />
+               Для поставщиков</a></li>
              <li><a class="about-link" href="aboutus.html">О производстве</a></li>
              <li><a class="about-link" href="docs.html">Наши документы</a></li>
              <li><a class="about-link" href="eco.html">Экологические стандарты</a></li>
            </ul>
          <div class="copyright">
            <a class="copyright-button" href="https://htmlacademy.ru/intensive/htmlcss">
-             HTML Academy
+             <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="HTML Academy" />
            </a>
            <p>
              Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">
