--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header class="main-header">
          <nav class="main-navigation">
            <a class="main-header-logo">
-             <img src="img/index-logo.svg" alt="Логотип Gllacy Shop">
+             <img src="img/logo.svg" width="154" height="64" alt="Логотип Gllacy Shop">
            </a>
            <ul class="site-navigation">
             <li class="navs"><a href="catalog.html">Каталог</a></li>
@@ -18,12 +18,14 @@
           </ul>
           <ul class="user-navigation">
             <li class="search">
-              <!-- здесь будет кнопка поиска -->
+              <img src="img/loupe.svg" width="17" height="17" alt="лупа поиска">
             </li>
             <li class="login-link">
+              <img src="img/entrance.svg" width="17" height="17" alt="Вход">
               <a href="entrance.html">Вход</a>
             </li>
             <li class="basket">
+              <img src="img/basket.svg" width="21" height="20" alt="Пустая корзина">
               <a href="basket.html">Пусто</a>
             </li>
           </ul>
@@ -50,7 +52,7 @@
 
              <ul class="features-list">
                <li class="feature-item">
-                 <img src="#" alt="иконка мороженого">
+                 <img src="img/ice-cream.svg" width="49" height="49" alt="иконка мороженого">
                  <p>
                    Все наше мороженое изготавливается на собственном
                    производстве, с использованием современного оборудования и
@@ -58,7 +60,7 @@
                  </p>
                </li>
                <li class="feature-item">
-                 <img src="#" alt="иконка листика">
+                 <img src="img/eco.svg" width="49" height="49" alt="иконка листика">
                  <p>
                    Для приготовления мороженого используются настоящие сливки и
                    молоко высочайшего качества. Все дополнительные ингредиенты и
@@ -66,7 +68,7 @@
                  </p>
                </li>
                <li class="feature-item">
-                 <img src="#" alt="иконка коровы">
+                 <img src="img/cow.svg" width="49" height="49" alt="иконка коровы">
                  <p>
                    Закупка ингредиентов  производится только у проверенных
                    фермерских хозяйств и компаний, с которыми нас связывает
@@ -74,7 +76,7 @@
                  </p>
                </li>
                <li class="feature-item">
-                 <img src="#" alt="иконка термостата">
+                 <img src="img/thermometer.svg" width="49" height="49" alt="иконка термостата">
                  <p>
                    Доставка нашего мороженого до заказчиков осуществляется в
                    специальном термопаке, который не дает мороженому растаять в
@@ -102,20 +104,30 @@
        </main>
        <footer class="main-footer">
          <ul class="footer-social">
-           <li class="social-button"><a href="#">Twitter</a></li>
-           <li class="social-button"><a href="#">Instagram</a></li>
-           <li class="social-button"><a href="#">Facebook</a></li>
-           <li class="social-button"><a href="#">VK</a></li>
+           <li class="social-button">
+             <img src="img/twitter.svg" width="32" height="32" alt="Twitter" />
+           </li>
+           <li class="social-button">
+             <img src="img/instagram.svg" width="32" height="32" alt="Instagram" />
+           </li>
+           <li class="social-button">
+             <img src="img/facebook.svg" width="32" height="32" alt="Facebook" />
+           </li>
+           <li class="social-button">
+             <img src="img/vk.svg" width="32" height="32" alt="VK" />
+           </li>
          </ul>
            <ul class="about">
-             <li><a class="about-link" href="supplier.html">Для поставщиков</a></li>
+             <li><a class="about-link" href="supplier.html">
+               <img src="img/heart.svg" width="15" height="13" alt="сердечко" />
+               Для поставщиков</a></li>
              <li><a class="about-link" href="aboutus.html">О производстве</a></li>
              <li><a class="about-link" href="docs.html">Наши документы</a></li>
              <li><a class="about-link" href="eco.html">Экологические стандарты</a></li>
            </ul>
          <div class="copyright">
            <a class="copyright-button" href="https://htmlacademy.ru/intensive/htmlcss">
-             HTML Academy
+             <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="HTML Academy" />
            </a>
            <p>
              Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">
