исправляем старые ошибки!

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
              <ul class="features-list">
                <li class="feature-item">
-                 <img src="#" alt="иконка мороженого">
+                 <a class="icon-1" alt="иконка мороженого" ></a>
                  <p>
                    Все наше мороженое изготавливается на собственном
                    производстве, с использованием современного оборудования и
@@ -60,7 +60,7 @@
                  </p>
                </li>
                <li class="feature-item">
-                 <img src="#" alt="иконка листика">
+                 <a class="icon-2" alt="иконка листика"></a>
                  <p>
                    Для приготовления мороженого используются настоящие сливки и
                    молоко высочайшего качества. Все дополнительные ингредиенты и
@@ -68,7 +68,7 @@
                  </p>
                </li>
                <li class="feature-item">
-                 <img src="#" alt="иконка коровы">
+                 <a class="icon-3" alt="иконка коровы"></a>
                  <p>
                    Закупка ингредиентов  производится только у проверенных
                    фермерских хозяйств и компаний, с которыми нас связывает
@@ -76,7 +76,7 @@
                  </p>
                </li>
                <li class="feature-item">
-                 <img src="#" alt="иконка термостата">
+                 <a class="icon-4" alt="иконка термостата"></a>
                  <p>
                    Доставка нашего мороженого до заказчиков осуществляется в
                    специальном термопаке, который не дает мороженому растаять в
@@ -105,16 +105,16 @@
        <footer class="main-footer">
          <ul class="footer-social">
            <li class="social-button">
-             <img src="img/twitter.svg" width="32" height="32" alt="Twitter" />
+             <a class="twitter" alt="иконка твиттера"></a>
            </li>
            <li class="social-button">
-             <img src="img/instagram.svg" width="32" height="32" alt="Instagram" />
+             <a class="instagram" alt="Instagram" />
            </li>
            <li class="social-button">
-             <img src="img/facebook.svg" width="32" height="32" alt="Facebook" />
+             <a class="facebook" alt="Facebook" />
            </li>
            <li class="social-button">
-             <img src="img/vk.svg" width="32" height="32" alt="VK" />
+             <a class="vk" alt="VK" />
            </li>
          </ul>
            <ul class="about">
