css#1. В начале начал делать поп-апы
Пока их не убрал. В общем, хочу понять, насколько неправ с:

--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Глейси</title>
-  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -230,19 +232,19 @@
     <ul class="footer-social">
       <li class="social-button">
         <a class="twitter">
-          <span class="visually hidden">иконка твиттера</span></a>
+          <span class="visually-hidden">иконка твиттера</span></a>
       </li>
       <li class="social-button">
         <a class="instagram">
-        <span class="visually hidden">Instagram</span></a>
+          <span class="visually-hidden">Instagram</span></a>
       </li>
       <li class="social-button">
-        <a class="facebook" alt="Facebook">
-          <span class="visually hidden">Facebook</span></a>
+        <a class="facebook">
+          <span class="visually-hidden">Facebook</span></a>
       </li>
       <li class="social-button">
-        <a class="vk" alt="VK">
-          <span class="visually hidden">ВКонтакте</span></a>
+        <a class="vk">
+          <span class="visually-hidden">ВКонтакте</span></a>
       </li>
     </ul>
     <ul class="about">
