--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <li><a href="about.html">О Компании</a></li>
       </ul>
       <ul class="user-navigation">
-        <li class="login-link search">
+        <li class="search">
           <!-- иконка лупы поиска -->
-          <form action="https://echo.htmlacademy.ru" method="post">
+          <form class="hidden-form" action="https://echo.htmlacademy.ru" method="post">
             <input type="search" placeholder="Что ищем?" />
           </form>
         </li>
@@ -39,7 +39,7 @@
           <a href="entrance.html">
             <img src="img/entrance.svg" width="17" height="17" alt="Вход">
             Вход</a>
-          <form action="https://echo.htmlacademy.ru" method="post">
+          <form class="hidden-form" action="https://echo.htmlacademy.ru" method="post">
             <input type="email" name="login" id="login-field" placeholder="Электронная почта" />
             <input type="password" name="password" id="password-field" placeholder="Пароль" />
             <input type="submit" value="Войти" />
